data/derived/comb/progs/unify/prog5330.ml.out
Characters 59-69:
  else bigAdd (l mulByDigit ((i-1) l));;
                 ^^^^^^^^^^
Error: This expression has type int -> ('a -> 'b -> 'c) -> int list
       but an expression was expected of type 'a
       The type variable 'a occurs inside int -> ('a -> 'b -> 'c) -> int list
